pub 탭에서 active 제거되는 문제 해결

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   </head>
   <body>
     <nav
-      class="navbar navbar-light fixed-top navbar-expand-lg py-0 compensate-for-scrollbar"
+      class="navbar navbar-light fixed-top navbar-expand-lg py-0 compensate-for-scrollbar top-navbar"
       id="navbar-main"
     >
       <div class="container">
