pub 탭 모바일뷰 조정

--- a/index.html
+++ b/index.html
@@ -1352,10 +1352,10 @@
     <section id="publications" class="home-section wg-blank">
       <div class="container">
         <div class="row">
-          <div class="col-12 col-lg-4 section-heading">
+          <div class="col-12 col-lg-4 section-heading pub-title-row">
             <h1>Publications</h1>
 
-            <ul class="nav flex-column nav-tabs pub-nav-tabs">
+            <ul class="nav nav-tabs flex-row flex-lg-column pub-nav-tabs">
               <li class="nav-item">
                 <a
                   class="nav-link active"
