pub-더미 journal,conference 넣음

--- a/index.html
+++ b/index.html
@@ -1393,12 +1393,12 @@
             </div> -->
           </div>
 
-          <div class="col-12 col-lg-8">
-            <!-- Total Publications -->
-            <div class="accordion">
+          <div class="col-12 col-lg-8 tab-content">
+            <!-- Pub: Academy -->
+            <div id="academy" class="accordion tab-pane fade show active">
               <!-- 2024 -->
               <h3>2024</h3>
-              <div class="container">Nothing</div>
+              <div class="container">Academy 2024</div>
 
               <!-- 2023 -->
               <h3>2023</h3>
@@ -2547,6 +2547,30 @@
                   </div>
                 </div>
               </div>
+            </div>
+
+            <!-- Pub: Journal-->
+            <div id="journal" class="accordion tab-pane fade">
+              <h3>2024</h3>
+              <div class="container">journal 2024</div>
+
+              <h3>2023</h3>
+              <div class="container">journal 2023</div>
+
+              <h3>2022</h3>
+              <div class="container">journal 2022</div>
+            </div>
+
+            <!-- Pub: Conference-->
+            <div id="conference" class="accordion tab-pane fade">
+              <h3>2024</h3>
+              <div class="container">conference 2024</div>
+
+              <h3>2023</h3>
+              <div class="container">conference 2023</div>
+
+              <h3>2022</h3>
+              <div class="container">conference 2022</div>
             </div>
           </div>
         </div>
