--- a/index.html
+++ b/index.html
@@ -1791,7 +1791,7 @@
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
                       <img
-                        src="img/dummy-img.jpg"
+                        src="img/j6.png"
                         class="card-img-top"
                         alt="..."
                       />
@@ -1851,7 +1851,7 @@
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
                       <img
-                        src="img/dummy-img.jpg"
+                        src="img/j5.png"
                         class="card-img-top"
                         alt="..."
                       />
@@ -1908,7 +1908,7 @@
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
                       <img
-                        src="img/dummy-img.jpg"
+                        src="img/c6.png"
                         class="card-img-top"
                         alt="..."
                       />
@@ -1967,7 +1967,7 @@
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
                       <img
-                        src="img/dummy-img.jpg"
+                        src="img/c5.png"
                         class="card-img-top"
                         alt="..."
                       />
@@ -2030,7 +2030,7 @@
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
                       <img
-                        src="img/dummy-img.jpg"
+                        src="img/c4.png"
                         class="card-img-top"
                         alt="..."
                       />
@@ -2088,7 +2088,7 @@
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
                       <img
-                        src="img/dummy-img.jpg"
+                        src="img/j4.png"
                         class="card-img-top"
                         alt="..."
                       />
@@ -2146,7 +2146,7 @@
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
                       <img
-                        src="img/dummy-img.jpg"
+                        src="img/j3.png"
                         class="card-img-top"
                         alt="..."
                       />
@@ -2215,7 +2215,7 @@
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
                       <img
-                        src="img/dummy-img.jpg"
+                        src="img/j2.png"
                         class="card-img-top"
                         alt="..."
                       />
@@ -2274,7 +2274,7 @@
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
                       <img
-                        src="img/dummy-img.jpg"
+                        src="img/c3.png"
                         class="card-img-top"
                         alt="..."
                       />
@@ -2344,7 +2344,7 @@
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
                       <img
-                        src="img/dummy-img.jpg"
+                        src="img/j1.png"
                         class="card-img-top"
                         alt="..."
                       />
@@ -2408,7 +2408,7 @@
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
                       <img
-                        src="img/dummy-img.jpg"
+                        src="img/c2.png"
                         class="card-img-top"
                         alt="..."
                       />
@@ -2475,7 +2475,7 @@
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
                       <img
-                        src="img/dummy-img.jpg"
+                        src="img/c1.png"
                         class="card-img-top"
                         alt="..."
                       />
