뉴스갤러리 업뎃

--- a/news_gallery.html
+++ b/news_gallery.html
@@ -124,64 +124,55 @@
 
         <div class="col-12 col-lg-4">
           <div class="card">
-            <img src="img/dummy3-img.png" class="card-img-top" alt="..." />
+            <img src="img/award/240621_[SCCuD] Efficient Processing in Memory design methodology with emulated neural networks for AI inferencing applications 연구 발표 상장.png Efficient Processing in Memory design methodology with emulated neural networks for AI inferencing applications 연구 발표 상장" class="card-img-top" alt="..." />
             <div class="card-body">
-              <h5 class="card-title">Yeongsu's Birthday</h5>
-              <p class="card-text">24.05.28</p>
+              <h5 class="card-title">[SCCuD] Efficient Processing in Memory design methodology with emulated neural networks for AI inferencing applications 연구 발표 상장</h5>
+              <p class="card-text">24.06.21</p>
             </div>
           </div>
         </div>
         <div class="col-12 col-lg-4">
           <div class="card">
-            <img src="img/dummy3-img.png" class="card-img-top" alt="..." />
+            <img src="img/award/240511_2024 가천대 SOC 학술대회 우수발표논문상_송민권.png" class="card-img-top" alt="..." />
             <div class="card-body">
-              <h5 class="card-title">Yeongsu's Birthday</h5>
-              <p class="card-text">24.05.28</p>
+              <h5 class="card-title">2024 가천대 SOC 학술대회 우수발표논문상_송민권</h5>
+              <p class="card-text">24.05.11</p>
             </div>
           </div>
         </div>
         <div class="col-12 col-lg-4">
           <div class="card">
-            <img src="img/dummy3-img.png" class="card-img-top" alt="..." />
+            <img src="img/award/240130_ICEIC_허동회.jpg" class="card-img-top" alt="..." />
             <div class="card-body">
-              <h5 class="card-title">Yeongsu's Birthday</h5>
-              <p class="card-text">24.05.28</p>
+              <h5 class="card-title">ICEIC 2024 Best Paper Award Gold Prize_허동회</h5>
+              <p class="card-text">24.01.30</p>
             </div>
           </div>
         </div>
         <div class="col-12 col-lg-4">
           <div class="card">
-            <img src="img/dummy3-img.png" class="card-img-top" alt="..." />
+            <img src="img/award/231222_[SCCuD]PIM simulation 테크닉 연구 발표 상장.jpg" class="card-img-top" alt="..." />
             <div class="card-body">
-              <h5 class="card-title">Yeongsu's Birthday</h5>
-              <p class="card-text">24.05.28</p>
+              <h5 class="card-title">[SCCuD]PIM simulation 테크닉 연구 발표 상장</h5>
+              <p class="card-text">23.12.22</p>
             </div>
           </div>
         </div>
         <div class="col-12 col-lg-4">
           <div class="card">
-            <img src="img/dummy3-img.png" class="card-img-top" alt="..." />
+            <img src="img/award/231222_[SCCuD] DSP BASED RECEIVER behavioral modeling 상장.png" class="card-img-top" alt="..." />
             <div class="card-body">
-              <h5 class="card-title">Yeongsu's Birthday</h5>
-              <p class="card-text">24.05.28</p>
+              <h5 class="card-title">[SCCuD] DSP BASED RECEIVER behavioral modeling 상장</h5>
+              <p class="card-text">23.12.22</p>
             </div>
           </div>
         </div>
         <div class="col-12 col-lg-4">
           <div class="card">
-            <img src="img/dummy3-img.png" class="card-img-top" alt="..." />
+            <img src="img/award/231201_ICASS_IEEE_박규란_장인우.jpg" class="card-img-top" alt="..." />
             <div class="card-body">
-              <h5 class="card-title">Yeongsu's Birthday</h5>
-              <p class="card-text">24.05.28</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-12 col-lg-4">
-          <div class="card">
-            <img src="img/dummy3-img.png" class="card-img-top" alt="..." />
-            <div class="card-body">
-              <h5 class="card-title">Yeongsu's Birthday</h5>
-              <p class="card-text">24.05.28</p>
+              <h5 class="card-title">ICASS_IEEE_Best Student Design Award_박규란_장인우</h5>
+              <p class="card-text">23.12.01</p>
             </div>
           </div>
         </div>
