--- a/news_gallery.html
+++ b/news_gallery.html
@@ -124,7 +124,7 @@
 
         <div class="col-12 col-lg-4">
           <div class="card">
-            <img src="img/award/240621_[SCCuD] Efficient Processing in Memory design methodology with emulated neural networks for AI inferencing applications 연구 발표 상장.png Efficient Processing in Memory design methodology with emulated neural networks for AI inferencing applications 연구 발표 상장" class="card-img-top" alt="..." />
+            <img src="img/award/240621_[SCCuD] Efficient Processing in Memory design methodology with emulated neural networks for AI inferencing applications 연구 발표 상장.png" class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title">[SCCuD] Efficient Processing in Memory design methodology with emulated neural networks for AI inferencing applications 연구 발표 상장</h5>
               <p class="card-text">24.06.21</p>
