--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       property="og:title"
       content="High-Performance Integrated Circuits(HPIC)"
     />
-    <meta property="og:description" content="Minseong Chu" />
+    <meta property="og:description" content="Minseong Choo" />
     <meta
       property="og:image"
       content="https://sorongosdev.github.io/lab_page/img/lab-logo.jpg"
@@ -1361,14 +1361,6 @@
                   class="nav-link active"
                   data-bs-toggle="tab"
                   data-bs-target="#academy"
-                  >Academy</a
-                >
-              </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link"
-                  data-bs-toggle="tab"
-                  data-bs-target="#journal"
                   >Journal</a
                 >
               </li>
@@ -1376,8 +1368,16 @@
                 <a
                   class="nav-link"
                   data-bs-toggle="tab"
-                  data-bs-target="#conference"
+                  data-bs-target="#journal"
                   >Conference</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link"
+                  data-bs-toggle="tab"
+                  data-bs-target="#conference"
+                  >Patent</a
                 >
               </li>
             </ul>
