--- a/index.html
+++ b/index.html
@@ -736,7 +736,7 @@
 
                           <!-- 프로필 이미지 아래 설명 -->
                           <div class="portrait-title">
-                            <h2>Minseong Chu</h2>
+                            <h2>Minseong Choo</h2>
                             <h3>Assistant Professor</h3>
 
                             <!-- 프로필 아래 링크 아이콘 -->
