Publications 카드 링크 새 탭에서 열기

--- a/index.html
+++ b/index.html
@@ -65,12 +65,6 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
-
-    <style>
-      .pub-card {
-        cursor: pointer;
-      }
-    </style>
   </head>
   <body>
     <nav
@@ -1790,11 +1784,7 @@
                   <!-- J6-->
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
-                      <img
-                        src="img/j6.png"
-                        class="card-img-top"
-                        alt="..."
-                      />
+                      <img src="img/j6.png" class="card-img-top" alt="..." />
                       <div class="card-body">
                         <p class="card-text">
                           A 10-Gb/s, 0.03-mm2, 1.28-pJ/bit Half-Rate
@@ -1850,11 +1840,7 @@
                   <!-- J5-->
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
-                      <img
-                        src="img/j5.png"
-                        class="card-img-top"
-                        alt="..."
-                      />
+                      <img src="img/j5.png" class="card-img-top" alt="..." />
                       <div class="card-body">
                         <p class="card-text">
                           A Current-Mode Digital AOT 4-Phase Buck Voltage
@@ -1907,11 +1893,7 @@
                   <!-- C6-->
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
-                      <img
-                        src="img/c6.png"
-                        class="card-img-top"
-                        alt="..."
-                      />
+                      <img src="img/c6.png" class="card-img-top" alt="..." />
                       <div class="card-body">
                         <p class="card-text">
                           A 4-to-20Gb/s 1.87 pJ/b referenceless digital CDR with
@@ -1966,11 +1948,7 @@
                   <!-- C5-->
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
-                      <img
-                        src="img/c5.png"
-                        class="card-img-top"
-                        alt="..."
-                      />
+                      <img src="img/c5.png" class="card-img-top" alt="..." />
                       <div class="card-body">
                         <p class="card-text">
                           A Synthesizable Digital AOT 4-Phase Buck Voltage
@@ -2029,11 +2007,7 @@
                   <!-- C4 -->
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
-                      <img
-                        src="img/c4.png"
-                        class="card-img-top"
-                        alt="..."
-                      />
+                      <img src="img/c4.png" class="card-img-top" alt="..." />
                       <div class="card-body">
                         <p class="card-text">
                           A 10-Gb/s, 0.03-mm2, 1.28-pJ/bit Half-Rate All-Digital
@@ -2087,11 +2061,7 @@
                   <!-- J4 -->
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
-                      <img
-                        src="img/j4.png"
-                        class="card-img-top"
-                        alt="..."
-                      />
+                      <img src="img/j4.png" class="card-img-top" alt="..." />
                       <div class="card-body">
                         <p class="card-text">
                           An optimum injection-timing tracking loop for 5-GHz,
@@ -2145,11 +2115,7 @@
                   <!-- J3 -->
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
-                      <img
-                        src="img/j3.png"
-                        class="card-img-top"
-                        alt="..."
-                      />
+                      <img src="img/j3.png" class="card-img-top" alt="..." />
                       <div class="card-body">
                         <p class="card-text">
                           A 2.5–5.6 GHz subharmonically injection-locked
@@ -2214,11 +2180,7 @@
                   <!-- J2 -->
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
-                      <img
-                        src="img/j2.png"
-                        class="card-img-top"
-                        alt="..."
-                      />
+                      <img src="img/j2.png" class="card-img-top" alt="..." />
                       <div class="card-body">
                         <p class="card-text">
                           A 55.1 mW 1.62-to-8.1 Gb/s video interface receiver
@@ -2273,11 +2235,7 @@
                   <!-- C3 -->
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
-                      <img
-                        src="img/c3.png"
-                        class="card-img-top"
-                        alt="..."
-                      />
+                      <img src="img/c3.png" class="card-img-top" alt="..." />
                       <div class="card-body">
                         <p class="card-text">
                           A 2.5GHz injection-locked ADPLL with 197fsrms
@@ -2343,11 +2301,7 @@
                   <!-- J1 -->
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
-                      <img
-                        src="img/j1.png"
-                        class="card-img-top"
-                        alt="..."
-                      />
+                      <img src="img/j1.png" class="card-img-top" alt="..." />
                       <div class="card-body">
                         <p class="card-text">
                           A 285-fs<sub>rms</sub> Integrated Jitter
@@ -2407,11 +2361,7 @@
                   <!-- C2 -->
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
-                      <img
-                        src="img/c2.png"
-                        class="card-img-top"
-                        alt="..."
-                      />
+                      <img src="img/c2.png" class="card-img-top" alt="..." />
                       <div class="card-body">
                         <p class="card-text">
                           A theoretical analysis of phase shift in pulse
@@ -2474,11 +2424,7 @@
                   <!-- C1 -->
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
-                      <img
-                        src="img/c1.png"
-                        class="card-img-top"
-                        alt="..."
-                      />
+                      <img src="img/c1.png" class="card-img-top" alt="..." />
                       <div class="card-body">
                         <p class="card-text">
                           A 5-GHz subharmonically injection-locked all-digital
@@ -3824,16 +3770,5 @@
     ></script>
     <!-- Custom js -->
     <script src="js/script.js"></script>
-
-    <!--카드 클릭 시 href로 이동하도록 하는 이벤트 리스너 추가 -->
-    <script>
-      document.addEventListener("DOMContentLoaded", function () {
-        document.querySelectorAll(".pub-card").forEach((card) => {
-          card.addEventListener("click", () => {
-            window.location.href = card.querySelector("a.card-text").href;
-          });
-        });
-      });
-    </script>
   </body>
 </html>
