플러스 버튼 좌측 문구 추가

--- a/index.html
+++ b/index.html
@@ -250,9 +250,20 @@
           <div class="col-12 col-lg-8">
             <div class="gallery-title-row">
               <h5>Gallery</h5>
-              <a href="news_gallery.html"
-                ><button class="btn btn-primary btn-rotate">+</button></a
-              >
+              <a href="news_gallery.html">
+                <span> Click for more details</span>
+                <button class="btn btn-primary btn-rotate">
+                  <!-- <img class="plus-icon" src="img/plus-svg.svg" /> -->
+                  <svg
+                    class="plus-icon"
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="4 4 16 16"
+                  >
+                    <rect x="11" y="4" width="2" height="16" rx="1" ry="1" />
+                    <rect x="4" y="11" width="16" height="2" rx="1" ry="1" />
+                  </svg>
+                </button>
+              </a>
             </div>
             <div class="gallery-card-container">
               <div class="card">
@@ -365,9 +376,20 @@
             <img class="hpic-img" src="img/research-main-img.jpg" />
             <div class="gallery-title-row chip-gallery-title-row">
               <h5>Chip Gallery</h5>
-              <a href="chip_gallery.html"
-                ><button class="btn btn-primary btn-rotate">+</button></a
-              >
+              <a href="chip_gallery.html">
+                <span> Click for more details</span>
+                <button class="btn btn-primary btn-rotate">
+                  <!-- <img class="plus-icon" src="img/plus-svg.svg" /> -->
+                  <svg
+                    class="plus-icon"
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="4 4 16 16"
+                  >
+                    <rect x="11" y="4" width="2" height="16" rx="1" ry="1" />
+                    <rect x="4" y="11" width="16" height="2" rx="1" ry="1" />
+                  </svg>
+                </button>
+              </a>
             </div>
 
             <div class="multiple-items">
