서브 페이지 토글버튼 동작 안 되는 문제 해결

--- a/news_gallery.html
+++ b/news_gallery.html
@@ -57,7 +57,7 @@
   </head>
   <body>
     <nav
-      class="navbar navbar-light fixed-top navbar-expand-lg py-0 compensate-for-scrollbar"
+      class="navbar navbar-light fixed-top navbar-expand-lg py-0 compensate-for-scrollbar top-navbar"
       id="navbar-main"
     >
       <div class="container">
@@ -75,8 +75,8 @@
         <button
           type="button"
           class="navbar-toggler collapsed"
-          data-toggle="collapse"
-          data-target="#navbar"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbar"
           aria-controls="navbar"
           aria-expanded="false"
           aria-label="Toggle navigation"
