People alumni 추가

--- a/index.html
+++ b/index.html
@@ -1379,9 +1379,7 @@
               </div>
 
               <!-- Undergraduate Internship-->
-              <h3 class="h3-items" id="ms-students">
-                Undergraduate Internship
-              </h3>
+              <h3 id="undergraduate-internship">Undergraduate Internship</h3>
               <div>
                 <div class="wrapper">
                   <div class="user-card">
@@ -1414,6 +1412,28 @@
                       <p><span>K Vasanthakumaaran</span></p>
                       <p><span>Sneha Das</span></p>
                       <p><span>Devarsh Bhandari</span></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <h3 class="h3-items" id="alumni">Alumni</h3>
+              <div>
+                <div class="wrapper">
+                  <div class="user-card">
+                    <div class="user-card-img">
+                      <img src="img/graduate-hanyange.png" alt="" />
+                    </div>
+                    <div class="user-card-info">
+                      <p><span>In-Woo Jang (M.S. @ KAIST)</span></p>
+                      <p>
+                        <span
+                          >Geun-Young Yoo (M.S.-Ph.D. @ Hanyang
+                          University)</span
+                        >
+                      </p>
+                      <p><span>Tae-Hyun Kim (M.S.-Ph.D. @ POSTECH)</span></p>
+                      <p><span>Seung-Wan Han (ASML)</span></p>
                     </div>
                   </div>
                 </div>
