--- a/index.html
+++ b/index.html
@@ -1471,7 +1471,7 @@
                 <a
                   class="nav-link"
                   data-bs-toggle="tab"
-                  data-bs-target="#conference"
+                  data-bs-target="#patent"
                   >Patent</a
                 >
               </li>
@@ -2598,16 +2598,143 @@
               <div class="container">journal 2022</div>
             </div>
 
-            <!-- Pub: Conference-->
-            <div id="conference" class="accordion tab-pane fade">
+            <!-- Pub: Patent-->
+            <div id="patent" class="accordion tab-pane fade">
               <h3>2024</h3>
-              <div class="container">conference 2024</div>
+              <div class="container">
+                <div class="row">
+                  <!-- 연번1 -->
+                  <div class="col-md-6">
+                    <div class="card pub-card mb-4">
+                      <img
+                        src="img/dummy3-img.png"
+                        class="card-img-top"
+                        alt="..."
+                      />
+                      <div class="card-body">
+                        <p class="card-text">
+                          <!-- 출원/등록 구분 -->
+                          <span class="badge text-bg-primary">출원</span>|
+                          <span class="badge process-badge">출원완료</span>|
+                          <!-- 출원/등록국가 & 등록번호 -->
+                          <span class="badge bg-success">KR · P20240060OP</span>
+                        </p>
+                        <p class="card-text">
+                          <!-- 발명의 명칭 -->
+                          데이터 처리 장치 및 그 제어 방법
+                        </p>
+                      </div>
+                      <ul class="list-group list-group-flush">
+                        <!-- 발명인 성명 -->
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-secondary me-2"
+                            >M.-G. Song</span
+                          >
+                          <span class="badge bg-secondary me-2"
+                            >S.-U. Kang</span
+                          >
+                          <span class="badge bg-secondary me-2">S.-Y. Kim</span>
 
-              <h3>2023</h3>
-              <div class="container">conference 2023</div>
+                          <span class="badge bg-secondary me-2"
+                            >M.-S. Choo</span
+                          >
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
 
-              <h3>2022</h3>
-              <div class="container">conference 2022</div>
+                  <!-- 연번2 -->
+                  <div class="col-md-6">
+                    <div class="card pub-card mb-4">
+                      <img
+                        src="img/dummy3-img.png"
+                        class="card-img-top"
+                        alt="..."
+                      />
+                      <div class="card-body">
+                        <p class="card-text">
+                          <!-- 출원/등록 구분 -->
+
+                          <span class="badge text-bg-primary">출원</span>|
+                          <span class="badge process-badge">출원완료</span>|
+                          <!-- 출원/등록국가 & 등록번호 -->
+
+                          <span class="badge bg-success">KR · P20240316OP</span>
+                        </p>
+                        <p class="card-text">
+                          <!-- 발명의 명칭 -->
+                          삼진/이진 신경망용 단일 종단 및 워드라인 분할 6T 정적
+                          램 기반 ADC 없는 프로세싱 인 메모리 가속기
+                        </p>
+                      </div>
+                      <ul class="list-group list-group-flush">
+                        <!-- 발명인 성명 -->
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-secondary me-2"
+                            >S.-U. Kang</span
+                          >
+                          <span class="badge bg-secondary me-2"
+                            >M.-G. Song</span
+                          >
+                          <span class="badge bg-secondary me-2">S.-Y. Kim</span>
+
+                          <span class="badge bg-secondary me-2"
+                            >M.-S. Choo</span
+                          >
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+
+                  <!-- 연번3 -->
+                  <div class="col-md-6">
+                    <div class="card pub-card mb-4">
+                      <img
+                        src="img/dummy3-img.png"
+                        class="card-img-top"
+                        alt="..."
+                      />
+                      <div class="card-body">
+                        <p class="card-text">
+                          <!-- 출원/등록 구분 -->
+                          <span class="badge text-bg-primary">출원</span>|
+                          <span class="badge process-badge">출원완료</span>|
+                          <!-- 출원/등록국가 & 등록번호 -->
+
+                          <span class="badge bg-success">KR · P20240332OP</span>
+                        </p>
+                        <p class="card-text">
+                          <!-- 발명의 명칭 -->
+                          주입 잠금 발진 장치, 상기 주입 잠금 발진 장치를 이용한
+                          위상 잠금 루프 회로 및 이의 제어 방법
+                        </p>
+                      </div>
+                      <ul class="list-group list-group-flush">
+                        <!-- 발명인 성명 -->
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-secondary me-2"
+                            >K.-R. Park</span
+                          >
+                          <span class="badge bg-secondary me-2">J.-H. Kim</span>
+                          <span class="badge bg-secondary me-2"
+                            >I.-W. Jang</span
+                          >
+
+                          <span class="badge bg-secondary me-2"
+                            >M.-S. Choo</span
+                          >
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
